Jillian added a new line of text.

--- a/data-cleaning.html
+++ b/data-cleaning.html
@@ -371,6 +371,7 @@ summary {
 
 <div id="data-cleaning" class="section level2">
 <h2>Data Cleaning</h2>
+<p>This is a new method to clean data. Jillian added the new method below.</p>
 </div>
 
 
