Made the change into a subheading.

--- a/data-cleaning.html
+++ b/data-cleaning.html
@@ -371,7 +371,9 @@ summary {
 
 <div id="data-cleaning" class="section level2">
 <h2>Data Cleaning</h2>
-<p>This is a new method to clean data. Jillian added the new method below.</p>
+<div id="this-is-a-new-method-to-clean-data.-jillian-added-the-new-method-below." class="section level3">
+<h3>This is a new method to clean data. Jillian added the new method below.</h3>
+</div>
 </div>
 
 
