forgot the knitted index file

--- a/index.html
+++ b/index.html
@@ -411,10 +411,13 @@ summary {
 <ul>
 <li><a href="data-cleaning.html">Data Cleaning</a></li>
 <li>Data Interpolation and Gap filling</li>
-<li>Linear models</li>
-<li>Animal movement models based on telemetry</li>
-<li>Data visualization</li>
+<li>Linear Models</li>
+<li>Animal Movement Models Based on Telemetry</li>
+<li><a href="data_visualization.html">Data Visualization</a></li>
 </ul>
+</div>
+<div id="bibliography" class="section level3">
+<h3>Bibliography</h3>
 </div>
 
 
