--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@ summary {
 <li>Linear Models</li>
 <li>Animal Movement Models Based on Telemetry</li>
 <li><a href="data_visualization.html">Data Visualization</a></li>
+<li><a href="https://gerber.shinyapps.io/bgchem/">Shiny App</a></li>
 </ul>
 </div>
 <div id="bibliography" class="section level3">
