spatial analysis completed

--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@ summary {
 <li>Animal Movement Models Based on Telemetry</li>
 <li><a href="data_visualization.html">Data Visualization</a></li>
 <li><a href="https://gerber.shinyapps.io/bgchem/">Shiny App</a></li>
+<li><a href="spacial_analysis.html">Spatial Analysis</a></li>
 </ul>
 </div>
 <div id="bibliography" class="section level3">
